@@ -1,6 +1,8 @@
 Version 1.11.4+dev:
  * AI:
    * Recruiting in Micro and Experimental AIs: allow more terrain codes for castles/keeps 
+   * Improved/Added: Command 'lua wesnoth.debug_ai([side]).ai' will now give access to the
+     ai-table of [side].
  * Campaigns:
    * Legend of Wesmere:
      * Scenario 05: Elvish Horse Archers can now carry the treasure
